welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:21: error: not found: value ind
  ind=i+1
  ^golomb:25: error: not found: value ind
      Ty(pointeur)=ind
                   ^